[metadata]
# replace with your username:
name = sandpiper
version = 0.0.1
author = Nicolas Pucino
author_email = npucino@deakin.edu.au
description = Tools for beach volumetric and behavioural dynamics analysis from UAV-SfM products.
long_description = file: README.md
keywords = beach, topography, uav-imagery, shoreline, satellite, python, coastal-dynamics
long_description_content_type = text/markdown
url = https://github.com/npucino/sandpiper
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
